--- a/crates/nbx-wallet/Cargo.toml
+++ b/crates/nbx-wallet/Cargo.toml
@@ -4,3 +4,5 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+nockchain-math = { workspace = true }
+ibig = { workspace = true }
