Add nockchain dependencies

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ path = "crates/nbx-wallet"
 
 [workspace.dependencies]
 nockvm = { git = "https://github.com/zorp-corp/nockchain.git" }
+nockchain-math = { git = "https://github.com/zorp-corp/nockchain.git" }
+ibig = { git = "https://github.com/zorp-corp/nockchain.git" }
