--- a/.github/workflows/wasm-build.yml
+++ b/.github/workflows/wasm-build.yml
@@ -24,6 +24,9 @@ jobs:
     - name: Install wasm-pack
       run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
 
+    - name: Install Protoc
+      uses: arduino/setup-protoc@v3
+
     - name: Build WASM
       working-directory: crates/iris-wasm
       run: wasm-pack build --target web
