--- a/crates/iris-ztd/Cargo.toml
+++ b/crates/iris-ztd/Cargo.toml
@@ -6,7 +6,7 @@ keywords = ["nockchain", "iris", "wallet", "nock"]
 license = "MIT"
 repository = "https://github.com/nockbox/iris-rs"
 rust-version = "1.85.0"
-description = "Base Zero-knowledge data structures for Nockchain"
+description = "Base Zero-knowledge data structures and noun-lib for Nockchain"
 documentation = "https://docs.rs/iris-ztd"
 homepage = "https://nockbox.org"
 authors = ["NockBox inc. <tech@nockbox.org>"]
