chore: update build and CI configurations
- Added .gitignore entry for .env files.
- Introduced a Makefile to streamline build, test, and publish processes.
- Updated GitHub Actions workflows to utilize Makefile commands for formatting, testing, and publishing.
- Removed obsolete release-please configuration files.
- Enhanced README with development instructions for auto-fixing formatting and clippy suggestions.

--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -17,4 +17,4 @@ jobs:
           components: rustfmt
 
       - name: Check formatting
-        run: cargo fmt --all -- --check
+        run: make fmt-check
