--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,15 +30,7 @@ jobs:
       - name: Publish crates to crates.io (workspace)
         env:
           CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
-        run: |
-          set -euo pipefail
-          # Publish in dependency order.
-          cargo publish -p rose-ztd-derive --locked
-          cargo publish -p rose-ztd --locked
-          cargo publish -p rose-crypto --locked
-          cargo publish -p rose-nockchain-types --locked
-          cargo publish -p rose-grpc-proto --locked
-          cargo publish -p rose-wasm --locked
+        run: make publish-crates
 
       - name: Setup Node.js (npm)
         uses: actions/setup-node@v4
@@ -50,13 +42,11 @@ jobs:
         run: curl https://rustwasm.github.io/wasm-pack/installer/init.sh -sSf | sh
 
       - name: Build WASM package for npm
-        working-directory: crates/rose-wasm
-        run: wasm-pack build --target web --out-dir pkg --scope nockchain
+        run: make wasm
 
       - name: Publish to npmjs
-        working-directory: crates/rose-wasm/pkg
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npm publish --access public
+        run: make npm-publish
 
 
