--- a/.github/workflows/clippy.yml
+++ b/.github/workflows/clippy.yml
@@ -40,4 +40,4 @@ jobs:
           sudo apt-get install -y protobuf-compiler
 
       - name: Run clippy
-        run: cargo clippy --all --all-targets --all-features -- -D warnings
+        run: make clippy
